# tpch-query5

./: .gitignore  CMakeLists.txt  README.md
include/: query5.hpp
src/: main.cpp  query5.cpp
